# webpki

./: .flake8  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  requirements.txt  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cifuzz.yml  testgen.yml
benches/: benchmark.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzzers/: anchor.rs  cert.rs  crl.rs
mk/: cargo.sh  clippy.sh  install-build-tools.sh
src/: alg_tests.rs  aws_lc_rs_algs.rs  calendar.rs  cert.rs  cert_policy.rs  crl.rs  der.rs  end_entity.rs  error.rs  lib.rs  name.rs  ring_algs.rs  rpk_entity.rs  sct.rs  signed_data.rs  test_utils.rs  time.rs  trust_anchor.rs  verify_cert.rs  x509.rs
src/crl/: mod.rs  types.rs
src/name/: dns_name.rs  ip_address.rs  name.rs  verify.rs
src/revocation_checking/: crl.rs  mod.rs  types.rs
src/subject_name/: directory_name.rs  dns_name.rs  ip_address.rs  mod.rs  verify.rs
tests/: amazon.rs  better_tls.rs  cert_with_empty_extensions.der  cert_with_empty_extensions.rs  cert_without_extensions.rs  client_auth.rs  client_auth_revocation.rs  crl_tests.rs  custom_ekus.rs  ee_keyverify.rs  generate.py  integration.rs  name_constraints.rs  name_tests.rs  revocation.rs  signatures.rs  tls_server_certs.rs  x509_limbo.rs
tests/amazon/: download_ca_certs.sh  download_demo_certs.sh  e2m01.cer  e2m01.crl  e2m02.cer  e2m02.crl  e2m03.cer  e2m03.crl  e2m04.cer  e2m04.crl  e3m01.cer  e3m01.crl  e3m02.cer  e3m02.crl  e3m03.cer  e3m03.crl  e3m04.cer  e3m04.crl  expired.rootca1.demo.amazontrust.com.cer  expired.rootca2.demo.amazontrust.com.cer  expired.rootca3.demo.amazontrust.com.cer  expired.rootca4.demo.amazontrust.com.cer  r2m01.cer  r2m01.crl  r2m02.crl  r2m03.crl  r2m04.crl  r4m01.cer  r4m01.crl  r4m02.cer  r4m02.crl  r4m03.cer  r4m03.crl  r4m04.cer  r4m04.crl  revoked.rootca1.demo.amazontrust.com.cer  revoked.rootca2.demo.amazontrust.com.cer  revoked.rootca3.demo.amazontrust.com.cer  revoked.rootca4.demo.amazontrust.com.cer  rootca1.crl  (+10 more)
tests/certificate_policies/: any-policy.der  generate.py
tests/client_auth/: cert_with_both_ekus_accepted_for_client_auth.ca.der  cert_with_both_ekus_accepted_for_client_auth.ee.der  cert_with_clientauth_eku_accepted_for_client_auth.ca.der  cert_with_clientauth_eku_accepted_for_client_auth.ee.der  cert_with_no_eku_accepted_for_client_auth.ca.der  cert_with_no_eku_accepted_for_client_auth.ee.der  cert_with_serverauth_eku_rejected_for_client_auth.ca.der  cert_with_serverauth_eku_rejected_for_client_auth.ee.der
tests/client_auth_revocation/: ee_not_revoked_ee_depth.crl.der  ee_not_revoked_wrong_ku_ee_depth.crl.der  ee_revoked_badsig.crl.der  ee_revoked_badsig_ee_depth.crl.der  ee_revoked_chain_depth.crl.der  ee_revoked_crl_ku.crl.der  ee_revoked_crl_ku_ee_depth.crl.der  ee_revoked_no_ku.crl.der  ee_revoked_no_ku_ee_depth.crl.der  ee_revoked_wrong_ku.crl.der  ee_revoked_wrong_ku_ee_depth.crl.der  int_not_revoked_chain_depth.crl.der  int_revoked_badsig.crl.der  int_revoked_badsig_chain_depth.crl.der  ku_chain.ee.der  (+26 more)
(+143 files in other folders)
